[package]
name = "cobust"
version = "0.1.1"
authors = ["vignesh"]
edition = "2018"
description = "A simple library for recovering from panic on async codebase with retries"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"
retryiter = "0.2"


[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["cookies"] }